[gd_scene load_steps=5 format=3 uid="uid://j4rfe4c53735"]

[ext_resource type="Script" path="res://scenes/debug/raw_resource_viewers/level_viewer.gd" id="1_slyd1"]
[ext_resource type="Texture2D" uid="uid://cseyojwy6622n" path="res://art/square_16_16.png" id="2_7h2xy"]
[ext_resource type="Shader" path="res://scenes/debug/raw_resource_viewers/components/level_tile.gdshader" id="3_wscnw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4pfwh"]
shader = ExtResource("3_wscnw")
shader_parameter/tile_type = null

[node name="level_viewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slyd1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 204.0
offset_bottom = 193.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level:"
horizontal_alignment = 2

[node name="spinbox_level" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="label_width" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "level width"
horizontal_alignment = 2

[node name="label_length" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "level length"
horizontal_alignment = 2

[node name="LabelCursorPos" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 218.0
offset_top = -43.0
offset_right = 258.0
offset_bottom = -20.0
grow_vertical = 0

[node name="square" type="Sprite2D" parent="."]
visible = false
position = Vector2(53, 136)
texture = ExtResource("2_7h2xy")
centered = false

[node name="tiles" type="Node2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_4pfwh")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/spinbox_level" to="." method="_on_spinbox_level_value_changed"]
